# JarvisQuestionedBot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  todo.md
config/: .env.example  __init__.py
config/settings/: setting.py
internal/app/: app.py  run.py
internal/entities/: models.py
internal/entities/database/: __init__.py  base.py  users.py
internal/entities/states/: StateModels.py  states.py
internal/filters/: Filters.py
internal/handlers/: __init__.py
internal/handlers/admins/: __init__.py  mailing.py
internal/handlers/users/: __init__.py  questioned.py  start.py
internal/messages/: confirm.md  mailing.md  reset.md  start.md
pkg/: get_message.py  google_client.py  keyboards.py  logger.py  middleware.py  steps.py
pkg/db_container/: init.sql
tests/: test_google_client.py
